# Carrots-Game-Engine

./: 404.html  BackgroundSerializer.worker.5f038bc6dafe988f5616.worker.js  BackgroundSerializer.worker.5f038bc6dafe988f5616.worker.js.map  BackgroundSerializer.worker.72bcab87531415751172.worker.js  BackgroundSerializer.worker.72bcab87531415751172.worker.js.map  Developers  LICENSE.md  README.md  Resource3DPreview.worker.83aab4c8d26fa5a27d81.worker.js  Resource3DPreview.worker.83aab4c8d26fa5a27d81.worker.js.map  TypeScriptCompiler.worker.3f31bb6007b6120f0468.worker.js  TypeScriptCompiler.worker.3f31bb6007b6120f0468.worker.js.map  TypeScriptCompiler.worker.a357aed1522eb97194f2.worker.js  TypeScriptCompiler.worker.a357aed1522eb97194f2.worker.js.map  asset-manifest.json  index.html  libGD.js  libGD.wasm  manifest.json  manifest.webmanifest  service-worker.js
Carrots-Engine source code/: .gitignore  CMakeLists.txt  README.md  WEBGPU_TSL_DEVELOPER_GUIDE.md
Carrots-Engine source code/.github/workflows/: deploy-web-pages.yml  webgpu-only-guards.yml
Carrots-Engine source code/Core/: CMakeLists.txt
Carrots-Engine source code/Core/tests/: BehaviorSerialization.cpp  DummyPlatform.cpp  ObjectSerialization.cpp
Carrots-Engine source code/Extensions/3D/: A_RuntimeObject3D.ts  AmbientLight.ts  BloomEffect.ts  BrightnessAndContrastEffect.ts  CSG3DRuntimeObject.ts  CSG3DRuntimeObjectPixiRenderer.ts  CSG3DRuntimeObjectRenderer.ts  ChromaticAberrationEffect.ts  ColorGradingEffect.ts  Cube3DRuntimeObject.ts  Cube3DRuntimeObjectPixiRenderer.ts  CustomRuntimeObject3D.ts  CustomRuntimeObject3DRenderer.ts  DepthOfFieldEffect.ts  DirectionalLight.ts  ExposureEffect.ts  HemisphereLight.ts  HueAndSaturationEffect.ts  JsExtension.js  LODBehavior.ts  LightObstacleBehavior.ts  LightingPipeline.ts  Model3DObjectConfiguration.cpp  Model3DObjectConfiguration.h  Model3DRuntimeObject.ts  Model3DRuntimeObject3DRenderer.ts  PBRMaterialBehavior.ts  PointLight.ts  PointLightRuntimeObject.ts  PostProcessingSharedResources.ts  PostProcessingStackEffect.ts  Primitive3DRuntimeObjects.ts  RainDropsEffect.ts  RectAreaLight.ts  RectAreaLightRuntimeObject.ts  RimLight.ts  SSAOEffect.ts  Scene3DTools.ts  ScreenSpaceReflectionsEffect.ts  ShaderGraphEffect.ts  (+8 more)
Carrots-Engine source code/Extensions/AnimationStateMachine/: AnimationStateMachineRuntimeBehavior.ts  JsExtension.js
Carrots-Engine source code/Extensions/BBText/: bbtextruntimeobject-pixi-renderer.ts
Carrots-Engine source code/Extensions/BitmapText/: bitmaptextruntimeobject-pixi-renderer.ts
Carrots-Engine source code/Extensions/CinematicTimeline/: JsExtension.js  cinematictimelinetools.ts
Carrots-Engine source code/Extensions/Effects/: blending-mode-pixi-filter.ts  blur-pixi-filter.ts  kawase-blur-pixi-filter.ts  light-night-pixi-filter.ts  night-pixi-filter.ts  outline-pixi-filter.ts
Carrots-Engine source code/Extensions/ExampleJsExtension/: dummyeffect.ts
Carrots-Engine source code/Extensions/Lighting/: JsExtension.js  lightruntimeobject-pixi-renderer.ts  lightruntimeobject.ts
Carrots-Engine source code/Extensions/NavMeshBehavior/: CMakeLists.txt  Extension.cpp  JsExtension.cpp  NavMeshAgentBehavior.cpp  NavMeshAgentBehavior.h  NavMeshLinkBehavior.cpp  NavMeshLinkBehavior.h  NavMeshObstacleBehavior.cpp  NavMeshObstacleBehavior.h  NavMeshSurfaceBehavior.cpp  NavMeshSurfaceBehavior.h  NavMeshTools.ts  navmeshobstacleruntimebehavior.ts  navmeshruntimebehavior.ts
Carrots-Engine source code/Extensions/NormalMap2D/: JsExtension.js  normalmapruntimebehavior.ts
Carrots-Engine source code/Extensions/PanelSpriteObject/: panelspriteruntimeobject-pixi-renderer.ts
Carrots-Engine source code/Extensions/PaperEngine/: README.md
Carrots-Engine source code/Extensions/ParticleSystem/: particleemitterobject-pixi-renderer.ts
Carrots-Engine source code/Extensions/RoomGenerator/: index.ts
Carrots-Engine source code/GDJS/: package-lock.json  package.json
Carrots-Engine source code/GDevelop.js/: CMakeLists.txt  types.d.ts  update-bindings.js
Carrots-Engine source code/build-core-tests/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Carrots-Engine source code/build-gdjs-runtime-check/: AsyncTasksManager.js.map  CustomRuntimeObject.js.map  CustomRuntimeObject2D.js.map  CustomRuntimeObjectInstanceContainer.js.map  InAppTutorialMessage.js  InAppTutorialMessage.js.map  Model3DManager.js  Model3DManager.js.map  ResourceCache.js.map  ResourceLoader.js.map  RuntimeCustomObjectLayer.js.map  RuntimeInstanceContainer.js  RuntimeInstanceContainer.js.map  RuntimeLayer.js  RuntimeLayer.js.map  SpriteAnimator.js.map  affinetransformation.js.map  capturemanager.js.map  force.js.map  gd.js.map  indexeddb.js.map  inputmanager.js.map  jsonmanager.js.map  layer.js.map  logger.js.map  multithreadingmanager.js.map  oncetriggers.js.map  polygon.js.map  profiler.js.map  runtimebehavior.js.map  runtimegame.js  runtimegame.js.map  runtimeobject.js  runtimeobject.js.map  runtimescene.js  runtimescene.js.map  runtimewatermark.js.map  scenestack.js.map  spriteruntimeobject.js  spriteruntimeobject.js.map  (+4 more)
Carrots-Engine source code/newIDE/: README.md
Carrots-Engine source code/scripts/: check-webgpu-only.js
(+1380 files in other folders)
